--- a/Furnicome/public/sign_up.html
+++ b/Furnicome/public/sign_up.html
@@ -6,90 +6,161 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrate</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/sign-up.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
+
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+
 </head>
-<main>
 
-    <body id="body-register">
-        <div class="container">
-            <form action="">
-                <div>
-                    <h1 class="title">Registrate</h1>
-                </div>
-                <form action="#">
-                    <div class="user-detail">
-                        <label for="">
-                            <div class="input-box">
-                                <span class="details"></span>
-                                <img src="../recursos/user.png" alt="" width="16px" height="16px">
-                                <input type="text" placeholder="Nombre" required>
-                            </div>
-                        </label>
-                        <label for="">
-                            <div class="input-box">
-                                <span class="details"></span>
-                                <img src="../recursos/id.png" alt="" width="20px" height="20px">
-                                <input type="text" placeholder="DUI" required>
-                            </div>
-                        </label>
-                        <label for="">
-                            <div class="input-box">
-                                <span class="details"></span>
-                                <img src="../recursos/lock.png" alt="" width="13px" height="16px">
-                                <input type="text" placeholder="Clave" required>
-                            </div>
-                        </label>
-                        <label for="">
-                            <div class="input-box">
-                                <span class="details"></span>
-                                <img src="../recursos/user.png" alt="" width="16px" height="16px">
-                                <input type="text" placeholder="Apellido" required>
-                            </div>
-                        </label>
-                        <label for="">
-                            <div class="input-box">
-                                <span class="details"></span>
-                                <img src="../recursos/alias.png" alt="" width="20px" height="20px">
-                                <input type="text" placeholder="Alias" required>
-                            </div>
-                        </label>
-                        <label for="">
-                            <div class="input-box">
-                                <span class="details"></span>
-                                <img src="../recursos/confirmar.png" alt="" width="16px" height="16px">
-                                <input type="text" placeholder="Confirmar clave" required>
-                            </div>
-                        </label>
+<body id="body-register">
+    <div class="container">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+                <!-- Container wrapper -->
+                <div class="container-fluid">
+                    <!-- Toggle button -->
+                    <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-bars"></i>
+                    </button>
+
+                    <!-- Collapsible wrapper -->
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <!-- Navbar brand -->
+                        <a class="navbar-brand mt-2 mt-lg-0" href="#">
+                            <img src="../recursos/FURNICOM.png" height="60" alt="Furnicom logo" loading="lazy" />
+                        </a>
+                        <!-- Left links -->
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../public/index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
+                                    data-mdb-toggle="dropdown" aria-expanded="false">Muebles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Descuentos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../public/about_us.html">Sobre nosotros</a>
+                            </li>
+                        </ul>
+                        <!-- Left links -->
                     </div>
-                    <div class="user-detail2">
-                        <label for="" class="label2">
-                            <div class="input-box">
-                                <span class="details"></span>
-                                <img src="../recursos/correo.png" alt="" width="16px" height="16px">
-                                <input class="largo" type="text" placeholder="Correo" required>
-                            </div>
-                        </label>
-                        <label for="" class="label2">
-                            <div class="input-box">
+                    <!-- Collapsible wrapper -->
 
-                                <img src="../recursos/direccion.png" alt="" width="16px" height="16px">
-                                <input class="largo" type="text" placeholder="Dirección" required>
-                            </div>
-                        </label>
-                        <div class="form-check">
-                            <label class="form-check-label" for="flexCheckDefault">Acepto terminos y condiciones</label>
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-                        <div class="button" id="button">
-                            <a href="../public/login.html">
-                                <button class="button" input type="submit" value="Registrar">Registrar</button>
+                    <!-- Right elements -->
+                    <div class="d-flex align-items-center">
+                        <!-- Icon -->
+
+                        <!-- Avatar -->
+                        <div class="dropdown">
+                            <a class="dropdown-toggle d-flex align-items-center hidden-arrow" href="#"
+                                id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown"
+                                aria-expanded="false">
+                                <img src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp" class="rounded-circle"
+                                    height="25" alt="Black and White Portrait of a Man" loading="lazy" />
                             </a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
+                                <li>
+                                    <a class="dropdown-item" href="#">My profile</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Settings</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Logout</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
-                </form>
+                    <!-- Right elements -->
+                </div>
+                <!-- Container wrapper -->
+
+            </nav>
+            <!-- Navbar -->
+        </header>
+        <form action="">
+            <div>
+                <h1 class="title">Registrate</h1>
+            </div>
+            <form action="#">
+                <div class="user-detail">
+                    <label for="">
+                        <div class="input-box">
+                            <span class="details"></span>
+                            <img src="../recursos/user.png" alt="" width="16px" height="16px">
+                            <input type="text" placeholder="Nombre" required>
+                        </div>
+                    </label>
+                    <label for="">
+                        <div class="input-box">
+                            <span class="details"></span>
+                            <img src="../recursos/user.png" alt="" width="16px" height="16px">
+                            <input type="text" placeholder="Apellido" required>
+                        </div>
+                    </label>
+                    <label for="">
+                        <div class="input-box">
+                            <span class="details"></span>
+                            <img src="../recursos/id.png" alt="" width="20px" height="20px">
+                            <input type="text" placeholder="DUI" required>
+                        </div>
+                    </label>
+                    <label for="">
+                        <div class="input-box">
+                            <span class="details"></span>
+                            <img src="../recursos/lock.png" alt="" width="13px" height="16px">
+                            <input type="text" placeholder="Clave" required>
+                        </div>
+                    </label>
+                    <label for="">
+                        <div class="input-box">
+                            <span class="details"></span>
+                            <img src="../recursos/confirmar.png" alt="" width="16px" height="16px">
+                            <input type="text" placeholder="Confirmar clave" required>
+                        </div>
+                    </label>
+                    
+                </div>
+                <div class="user-detail2">
+                    <label for="" class="label2">
+                        <div class="input-box">
+                            <span class="details"></span>
+                            <img src="../recursos/correo.png" alt="" width="16px" height="16px">
+                            <input class="largo" type="text" placeholder="Correo" required>
+                        </div>
+                    </label>
+                    <label for="" class="label2">
+                        <div class="input-box">
+
+                            <img src="../recursos/direccion.png" alt="" width="16px" height="16px">
+                            <input class="largo" type="text" placeholder="Dirección" required>
+                        </div>
+                    </label>
+                    <div class="form-check">
+                        <label class="form-check-label" for="flexCheckDefault">Acepto terminos y condiciones</label>
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    </div>
+                    <div class="button" id="button">
+                        <a href="../public/login.html">
+                            <button class="button" input type="submit" value="Registrar">Registrar</button>
+                        </a>
+                    </div>
+                </div>
             </form>
-        </div>
-    </body>
-</main>
+        </form>
+    </div>
+
+</body>
 
 </html>
